# Fabric-Agent

./: README.md
.github/workflows/: ci.yml
contracts/: box.schema.json  fabric-agent.openapi.yaml  fabric-event.schema.json
docs/: architecture.md
operator/crds/: agent.yaml  box.yaml  fabric.yaml
policy/opa/: deny-by-default.rego  human-approval.rego
policy/openfga/: authorization-model.fga
runtime/rust/: Cargo.toml
runtime/rust/src/: box_model.rs  event.rs  evidence.rs  lib.rs  policy.rs  reconciler.rs
