[package]
name = "fabric-agent-runtime"
version = "0.1.0"
edition = "2021"
description = "Reference Rust runtime skeleton for the Fabric Agent reconciliation framework"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
